[project]
name = "akatsuki-utils"
authors = [
    {name = "Akatsuki Team", email = "support@akatsuki.gg"},
]
description = "Shared library for Akatsuki python apps"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["akatsuki_utils"]

[tool.hatch.version]
path = "akatsuki_utils/__about__.py"
